* Getting Started - set black background for the entire view * Getting Started - support gestures for horizontal scroll

--- a/ColorSisters/Readme.html
+++ b/ColorSisters/Readme.html
@@ -7,12 +7,12 @@
 <h2>Toolchain</h2>
 
 <ul>
-<li>Xcode Version 6.1 (6A1052d)</li>
+<li>Xcode Version 6.1.1 (6A2008a)</li>
 <li>iOS SDK 8.1</li>
 <li>Deployment Target 7.1</li>
 <li>Mavericks, OS X 10.9.5 (13F34)</li>
 <li><a href="http://daringfireball.net/projects/markdown/">Markdown</a> for HTML documentation from Readme.md</li>
-<li>Git https://<user>@kokko.git.cloudforge.com/ioscolorsisters.git</li>
+<li>Git, https://<user>@kokko.git.cloudforge.com/ioscolorsisters.git</li>
 <li><a href="https://kokko.git.cloudforge.com/ioscolorsisters">Cloud Forge</a></li>
 </ul>
 
@@ -62,6 +62,13 @@ ColorSisters[4970:3070480] KokkoInterface async via Grand Central Dispatch</p>
 
 <p>ColorSisters[4970:3070447] KokkoInterface init in didFinishPickingMedia() = 0x7fb2c0452420
 ```</p>
+
+<h3>2 Dec 2014</h3>
+
+<ul>
+<li>Getting Started - set black background for the entire view</li>
+<li>Getting Started - support gestures for horizontal scroll </li>
+</ul>
 
 <h3>24 Nov 2014</h3>
 
@@ -125,6 +132,10 @@ ColorSisters[4970:3070480] KokkoInterface async via Grand Central Dispatch</p>
 </ul>
 
 <h1>Images</h1>
+
+<h1>Screen Shots and Previews</h1>
+
+<p><img src="./Documentation/GettingStarted-preview.png" alt="alt text" title="" /></p>
 
 <h2>Icon</h2>
 
