* Camera View - Once you touch “getting started” it should open the camera view (viewfinder mode), unless the camera is unavailable, in which case open in picker view. * Camera View - Cancel should take you back to the launch pages * Camera View - Flash control is disabled (rear camera)

--- a/ColorSisters/Readme.html
+++ b/ColorSisters/Readme.html
@@ -28,6 +28,16 @@ Builds are tested against</p>
 
 <h2>Build Notes</h2>
 
+<h3>2 Dec 2014</h3>
+
+<ul>
+<li>Getting Started - set black background for the entire view</li>
+<li>Getting Started - support gestures for horizontal scroll</li>
+<li>Camera View - Once you touch “getting started” it should open the camera view (viewfinder mode), unless the camera is unavailable, in which case open in picker view.</li>
+<li>Camera View - Cancel should take you back to the launch pages</li>
+<li>Camera View - Flash control is disabled (rear camera)</li>
+</ul>
+
 <h3>27 Nov 2014</h3>
 
 <ul>
@@ -62,13 +72,6 @@ ColorSisters[4970:3070480] KokkoInterface async via Grand Central Dispatch</p>
 
 <p>ColorSisters[4970:3070447] KokkoInterface init in didFinishPickingMedia() = 0x7fb2c0452420
 ```</p>
-
-<h3>2 Dec 2014</h3>
-
-<ul>
-<li>Getting Started - set black background for the entire view</li>
-<li>Getting Started - support gestures for horizontal scroll </li>
-</ul>
 
 <h3>24 Nov 2014</h3>
 
