--- a/ColorSisters/Readme.html
+++ b/ColorSisters/Readme.html
@@ -10,7 +10,7 @@
 <li>Xcode Version 6.1.1 (6A2008a)</li>
 <li>iOS SDK 8.1</li>
 <li>Deployment Target 7.1</li>
-<li>Mavericks, OS X 10.9.5 (13F34)</li>
+<li>Yosemite, OS X 10.10.1 (14B25)</li>
 <li><a href="http://daringfireball.net/projects/markdown/">Markdown</a> for HTML documentation from Readme.md</li>
 <li>Git, https://<user>@kokko.git.cloudforge.com/ioscolorsisters.git</li>
 <li><a href="https://kokko.git.cloudforge.com/ioscolorsisters">Cloud Forge</a></li>
@@ -28,6 +28,27 @@ Builds are tested against</p>
 
 <h2>Build Notes</h2>
 
+<h3>4 Dec 2014</h3>
+
+<ul>
+<li>Added Match and match details from hardcoded data</li>
+<li>Added a recommendations dictionary, via getRecommendationsUIONLY()</li>
+<li>Known Issues with this build
+<ul>
+<li>TODO - Image Processing - Find Foundation background view shows - http://stackoverflow.com/questions/2971483/hide-uitoolbar-uibarbuttonitems</li>
+<li>TODO - alternate version of build Target, with build targets for image analysis or UI only</li>
+</ul></li>
+</ul>
+
+<h3>3 Dec 2014</h3>
+
+<ul>
+<li>Matches - table and storyboard fixed</li>
+<li>Getting Started - removed 'jarring' UI issue with navi bar'</li>
+<li>Getting Started - added 10 second timer</li>
+<li>Removed Project warning</li>
+</ul>
+
 <h3>2 Dec 2014</h3>
 
 <ul>
@@ -38,10 +59,8 @@ Builds are tested against</p>
 <li>Camera View - Flash control is disabled (rear camera)</li>
 <li>Known Issues with this build
 <ul>
-<li>Share Results - Layout and storyboard previews are fine, but device shows an error (under investigation, see Images below)</li>
-<li>Getting Started - Needs 8 second timer (under investigation)</li>
-<li>Matches - Layout issues, too high (needs more space below the status bar)</li>
-<li>TODO:  Since you have the data, could fake up showing a recommendation.</li>
+<li>TODO - Image Processing - Find Foundation background view shows - http://stackoverflow.com/questions/2971483/hide-uitoolbar-uibarbuttonitems</li>
+<li>TODO - alternate version of build Target, with build targets</li>
 </ul></li>
 </ul>
 
